# vidlang

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
docs/: functions.md  new_design.md  rambling.md
examples/: easing.vid  main.vid  ops.vid
examples/basic/: main.vid  vid.toml
src/: main.rs
src/ast/: binop.rs  control_flow.rs  definition.rs  expr.rs  intrinsics.rs  literal.rs  mod.rs  token.rs  tokenizer.rs  ty.rs  unop.rs  utils.rs
src/check/: checker.rs  ir.rs  mod.rs  ty.rs
src/codebase/: config.rs  mod.rs
src/entities/: codebase.rs  messages.rs  mod.rs  names.rs  src.rs
src/pools/: codebase.rs  exprs.rs  items.rs  messages.rs  mod.rs  modules.rs  names.rs
src/tokens/: mod.rs  token.rs  tokenizer.rs  tokenstream.rs
src/utils/: lookahead_iter.rs  mod.rs  tests.rs
std/: clips.vid  ease.vid  effects.vid  list.vid  math.vid  ops.vid  prelude.vid  str.vid  tween.vid  types.vid  vid.toml
vscode/: language-configuration.json  package.json  vid.tmLanguage.json
