[package]
name = "vidlang"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features=["derive"] }
strum = "0.28"
strum_macros = "0.28"
unicode-xid = "0.2.6"
slotmap = "1.1"
string-interner = "0.19"
serde = { version = "1.0.228", features=["derive"] }
toml = "1.0.3"
semver = { version = "1.0.27", features=["serde"] }

[dev-dependencies]
tempfile = "3.26"
